--- a/frontend demo/package.json
+++ b/frontend demo/package.json
@@ -13,8 +13,7 @@
     "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-toastify": "^10.0.5",
-    "zod": "^3.23.8"
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
